--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -277,12 +277,12 @@ button {
   background-color: rgba(0, 0, 0, 0.3);
   backdrop-filter: blur(20px);
   border-right: 2px solid var(--border-color);
-  box-shadow: 2px 0 40px 15px rgba(0, 0, 0, 0.3);
+  box-shadow: 2px 0 40px 15px rgba(0, 0, 0, 0.6);
   transition: left 0.3s ease;
   z-index: 11;
 }
 .light .nav-area {
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: rgba(255, 255, 255, 0.6);
   border-right: none;
 }
 .nav-area.active {
@@ -680,7 +680,7 @@ header .nav-area.active .nav-social {
   transition: bottom 0.5s ease;
 }
 .light .scroll-to-top {
-  background-color: var(--title-color);
+  background-color: var(--primary-color);
   border-color: var(--title-color);
 }
 .scroll-to-top.active {
