--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,13 +13,13 @@
 
 /* Presets */
 :root {
-  --primary-color: #38bdf8;
-  --title-color: #e2e8f0;
-  --sub-title-color: #f8fafc;
-  --text-color: #94a3b8;
-  --bg-color: #0f172a;
-  --bg-color-alt: #162033;
-  --border-color: rgba(203, 213, 225, 0.1);
+  --primary-color: #4f46e5;
+  --title-color: #0f172a;
+  --sub-title-color: #0f172a;
+  --text-color: #64748b;
+  --bg-color: #fff;
+  --bg-color-alt: #fff;
+  --border-color: #eaeaea;
 
   --body-font: "Poppins", sans-serif;
   --hero-title-font: "Poppins", sans-serif;
@@ -43,17 +43,17 @@
   --title-bottom-margin: 1rem;
   --sub-title-bottom-margin: 1.5rem;
 
-  --box-shadow: 2px 3px 35px 15px rgba(0, 0, 0, 0.3);
-}
-.light:root {
-  --primary-color: #4f46e5;
-  --title-color: #0f172a;
-  --sub-title-color: #0f172a;
-  --text-color: #64748b;
-  --bg-color: #fff;
-  --bg-color-alt: #fff;
-  --border-color: #eaeaea;
   --box-shadow: 2px 3px 25px rgba(0, 0, 0, 0.3);
+}
+.dark:root {
+  --primary-color: #38bdf8;
+  --title-color: #e2e8f0;
+  --sub-title-color: #f8fafc;
+  --text-color: #94a3b8;
+  --bg-color: #0f172a;
+  --bg-color-alt: #162033;
+  --border-color: rgba(203, 213, 225, 0.1);
+  --box-shadow: 2px 3px 35px 15px rgba(0, 0, 0, 0.3);
 }
 *,
 ::before,
@@ -145,9 +145,13 @@ textarea,
   display: block !important;
   margin-inline: auto;
 }
-.light input,
-.light textarea {
+input,
+textarea {
   border: 2px solid rgba(0, 0, 0, 0.2);
+}
+.dark input,
+.dark textarea {
+  border: none;
 }
 textarea {
   resize: none;
@@ -156,10 +160,6 @@ textarea {
 input:focus,
 textarea:focus {
   outline: none;
-  background-color: var(--title-color);
-}
-.light input:focus,
-.light textarea:focus {
   background-color: white;
   border-color: var(--primary-color);
 }
@@ -274,16 +274,16 @@ button {
   bottom: 0;
   width: 80%;
   max-width: 380px;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(255, 255, 255, 0.6);
+  border-right: none;
   backdrop-filter: blur(20px);
-  border-right: 2px solid var(--border-color);
   box-shadow: 2px 0 40px 15px rgba(0, 0, 0, 0.6);
   transition: left 0.3s ease;
   z-index: 11;
 }
-.light .nav-area {
-  background-color: rgba(255, 255, 255, 0.6);
-  border-right: none;
+.dark .nav-area {
+  background-color: rgba(0, 0, 0, 0.3);
+  border-right: 2px solid var(--border-color);
 }
 .nav-area.active {
   left: 0;
@@ -527,19 +527,20 @@ header .nav-area.active .nav-social {
 }
 .skills-section .progress-area {
   margin-bottom: 1.5rem;
-  box-shadow: var(--box-shadow);
-}
-.light .skills-section .progress-area {
   box-shadow: none;
+}
+.dark .skills-section .progress-area {
+  box-shadow: var(--box-shadow);
 }
 .skills-section .progress-wrapper {
   background-color: white;
   height: 12px;
   width: 100%;
   border-radius: 8px;
-}
-.light .skills-section .progress-wrapper {
   border: 1px solid var(--primary-color);
+}
+.dark .skills-section .progress-wrapper {
+  border: none;
 }
 .skills-section .progress-status {
   background: var(--primary-color)
@@ -608,6 +609,12 @@ header .nav-area.active .nav-social {
 .works-section .works-info h3 {
   margin-bottom: 0;
 }
+.works-section .button {
+  margin-top: 2rem;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+}
 
 /* Banner Section */
 .banner-section .container-box .flex-box {
@@ -672,22 +679,39 @@ header .nav-area.active .nav-social {
   display: block;
   padding: 5px;
   border-radius: 5px;
-  background-color: var(--bg-color-alt);
   position: fixed;
   bottom: -100px;
   right: 2rem;
-  border: 2px solid var(--primary-color);
+  background-color: var(--primary-color);
+  border: 2px solid var(--title-color);
   transition: bottom 0.5s ease;
 }
-.light .scroll-to-top {
-  background-color: var(--primary-color);
-  border-color: var(--title-color);
+.dark .scroll-to-top {
+  border-color: var(--primary-color);
+  background-color: var(--bg-color-alt);
 }
 .scroll-to-top.active {
   bottom: 2rem;
 }
 .scroll-to-top img {
   width: 50px;
+}
+
+/* Works Page */
+.works-title-section {
+  padding-top: 2rem;
+  padding-bottom: 0;
+}
+.works-page .works-section {
+  padding-top: 1rem;
+  padding-bottom: 4rem;
+}
+.works-page .breadcrumbs {
+  margin-bottom: 1rem;
+}
+.works-page .breadcrumbs ul {
+  all: unset;
+  list-style-position: inside;
 }
 
 /* Thank You Page */
