--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -72,6 +72,7 @@ body {
   font-weight: var(--body-weight);
   color: var(--text-color);
   background: var(--bg-color);
+  transition: background 0.3s ease-out;
 }
 section {
   padding-top: 4rem;
@@ -244,6 +245,7 @@ button {
   left: 0;
   right: 0;
   z-index: 10;
+  transition: background 0.3s ease-out;
 }
 .header-section .container-box {
   display: flex;
@@ -259,9 +261,9 @@ button {
   align-items: center;
   gap: 1.2rem;
 }
-.header-section .header-icons i {
+.header-section .header-icons #theme-toggler {
   color: var(--title-color);
-  font-size: 1.3rem;
+  font-size: 1.5rem;
   display: block;
   margin-top: 5px;
   cursor: pointer;
@@ -662,6 +664,8 @@ header .nav-area.active .nav-social {
 /* Footer Section */
 .footer-section {
   background-color: var(--bg-color-alt);
+  position: relative;
+  z-index: 2;
 }
 .footer-section .bottom-footer {
   background-color: var(--primary-color);
@@ -685,6 +689,7 @@ header .nav-area.active .nav-social {
   background-color: var(--primary-color);
   border: 2px solid var(--title-color);
   transition: bottom 0.5s ease;
+  z-index: 1;
 }
 .dark .scroll-to-top {
   border-color: var(--primary-color);
@@ -707,11 +712,7 @@ header .nav-area.active .nav-social {
   padding-bottom: 4rem;
 }
 .works-page .breadcrumbs {
-  margin-bottom: 1rem;
-}
-.works-page .breadcrumbs ul {
-  all: unset;
-  list-style-position: inside;
+  margin-bottom: 3rem;
 }
 
 /* Thank You Page */
@@ -804,7 +805,7 @@ header .nav-area.active .nav-social {
     background: none;
     color: var(--title-color);
   }
-  .header-section .header-icons i {
+  .header-section .header-icons #theme-toggler {
     margin-top: 0;
   }
 
