--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -255,6 +255,7 @@ button {
 .header-section .logo {
   font-size: 1.5rem;
   color: var(--title-color);
+  min-width: 150px;
 }
 .header-section .header-icons {
   display: flex;
@@ -634,6 +635,9 @@ header .nav-area.active .nav-social {
   background-color: rgba(79, 70, 229, 0.25);
   padding: 1px 5px;
   border-radius: 3px;
+}
+.dark .works-section .works-info span {
+  background-color: rgba(56, 189, 248, 0.25);
 }
 .works-section .works-info h3 {
   margin-bottom: 0;
